--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>Heshik Nandan is an enthusiastic, challange seeking developer. His background is in System Analysis and Mechanical Engineering.</p>
-					<p>Heshik is fascinated by codes and automobiles. He strives to learn and understand concepts that intrigue him and spends countless hours until he grasps the fundamentals.
+					<p>Heshik Nandan is an enthusiastic, challange-seeking developer. His background is in System Analysis and Mechanical Engineering.</p>
+					<p>Heshik is fascinated by codes and automobiles. He strives to learn and understand concepts that intrigue him by spending countless hours diving deep into their fundamentals.
 						He is good at taking an existing concept and improvising it to suit him or his surroundings. </p>
 					<p>Heshik is currently working as a Senior Developer and is always up for a Coffee.</p>
 				</div>
