Upload and link resume to the website

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 									<li><a href="https://www.facebook.com/heshik.nandan.3/" target="_blank"><i class="icon-facebook2"></i></a></li>
 									<li><a href="https://sg.linkedin.com/in/heshik" target="_blank"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://www.instagram.com/heshik_nandan/" target="_blank"x`><i class="icon-instagram2"></i></a></li>
+									<li><a href="#" data-toggle="modal" data-target="#download-resume" target="_blank"x`><i class="icon-text-document"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -112,6 +113,27 @@
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
 	</div>
 	
+	<div class="modal" id="download-resume" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document">
+		  <div class="modal-content">
+			<div class="modal-header">
+			  <h5 class="modal-title">Download my Resume</h5>
+			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			  </button>
+			</div>
+			<div class="modal-body">
+			  <p>Just wanted to ensure that you were really looking to download my resume. Thank you for showing interest in my profile.</p>
+			</div>
+			<div class="modal-footer">
+			  <button type="button" onclick="window.open('./files/heshik-nandan.pdf')" class="btn btn-primary">Download as PDF</button>
+			  <button type="button"  onclick="window.open('./files/heshik-nandan.docx')" class="btn btn-primary">Download as Docx</button>
+			  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			</div>
+		  </div>
+		</div>
+	  </div>
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
