--- a/index.html
+++ b/index.html
@@ -118,16 +118,13 @@
 		  <div class="modal-content">
 			<div class="modal-header">
 			  <h5 class="modal-title">Download my Resume</h5>
-			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				<span aria-hidden="true">&times;</span>
-			  </button>
 			</div>
 			<div class="modal-body">
 			  <p>Just wanted to ensure that you were really looking to download my resume. Thank you for showing interest in my profile.</p>
 			</div>
 			<div class="modal-footer">
-			  <button type="button" onclick="window.open('./files/heshik-nandan.pdf')" class="btn btn-primary">Download as PDF</button>
-			  <button type="button"  onclick="window.open('./files/heshik-nandan.docx')" class="btn btn-primary">Download as Docx</button>
+			  <button type="button" onclick="window.open('./files/heshik-nandan.pdf')" class="btn btn-primary" data-dismiss="modal">Download as PDF</button>
+			  <button type="button"  onclick="window.open('./files/heshik-nandan.docx')" class="btn btn-primary" data-dismiss="modal">Download as Docx</button>
 			  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 			</div>
 		  </div>
