Update about us description about myself

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 					<h2>Hello There!</h2>
 					<p>Heshik Nandan is an enthusiastic, challange-seeking developer. His background is in System Analysis and Mechanical Engineering.</p>
 					<p>Heshik is fascinated by codes and automobiles. He strives to learn and understand concepts that intrigue him by spending countless hours diving deep into their fundamentals.
-						He is good at taking an existing concept and improvising it to suit him or his surroundings. </p>
-					<p>Heshik is currently working as a Senior Developer and is always up for a Coffee.</p>
+						He is good at taking an existing concept and improvising it.</p>
+					<p>Heshik is currently working as a Senior Developer. Hit him up to have a nerdy conversation over a cup of coffee. </p>
 				</div>
 			</div>
 		</div>
